src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__struct_initialization_uses_types_default_if_not_provided.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%Point = type { i32, i32, i32 }

@x = global %Point { i32 1, i32 2, i32 7 }
@__Point__init = unnamed_addr constant %Point { i32 0, i32 0, i32 7 }

