src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__struct_initializer_uses_fallback_to_field_default.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
assertion_line: 312
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%Point = type { i32, i32, i32 }

@Point__init = addrspace(4) global %Point { i32 0, i32 0, i32 3 }
@x = global %Point { i32 1, i32 2, i32 3 }

