src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__struct_with_one_field_can_be_initialized.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
assertion_line: 242
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%MyPoint = type { i32 }

@MyPoint__init = addrspace(4) global %MyPoint zeroinitializer
@a = global %MyPoint { i32 7 }

