src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__type_defaults_are_used_for_uninitialized_constants.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: result.unwrap()
---
; ModuleID = 'main'
source_filename = "main"

@a = unnamed_addr constant i16 7
@b = unnamed_addr constant i16 21
@c = unnamed_addr constant i32 2
@d = unnamed_addr constant i32 30

